--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.40"
 tokio = {version = "1.43.0", features=["full"]}
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
