--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.40"
+serde = {version="1.0.218", features=["derive"]}
 tokio = {version = "1.43.0", features=["full"]}
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
