--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.40"
+log_buffer = "1.2.0"
 serde = {version="1.0.218", features=["derive"]}
 serde_json = "1.0.139"
 tokio = {version = "1.43.0", features=["full"]}
