--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ chrono = "0.4.40"
 log_buffer = "1.2.0"
 serde = {version="1.0.218", features=["derive"]}
 serde_json = "1.0.139"
+thiserror = "2.0.12"
 tokio = {version = "1.43.0", features=["full"]}
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
